-
Bug
-
Resolution: Done
-
P4: Low
-
4.7.3
-
None
-
All
-
I418af4b83795d53c9d86a2ac620c0f7c5bb9ada3
The signal is emitted in the function commitData().
This should be documented that the signal commitDataRequest() is not emitted if you override commitData().
For Gerrit Dashboard: QTBUG-23117 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
31366,2 | Document emission of commitDataRequest() signal in QApplication doc. | master | qt/qtbase | Status: MERGED | +2 | 0 |